Fix script after exportify csv changes

--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
     "misc": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/misc.csv\" --output \"./data/playlists\"",
     "mixes": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/mixes.csv\" --output \"./data/playlists\"",
     "dance": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/dance.csv\" --output \"./data/playlists\"",
-    "clubbing": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/clubbing.csv\" --output \"./data/playlists\""
+    "clubbing": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/clubbing.csv\" --output \"./data/playlists\"",
+    "di": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/di_party.csv\" --output \"./data/playlists\"",
+    "funk": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/funk.csv\" --output \"./data/playlists\"",
+    "funk_john": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/funk_do_john.csv\" --output \"./data/playlists\"",
+    "80s_club_mix": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/80s_club_mix.csv\" --output \"./data/playlists\"",
+    "hip_hop_tuga": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/hip_hop_tuga.csv\" --output \"./data/playlists\"",
+    "bailarico": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/musica_de_bailarico.csv\" --output \"./data/playlists\"",
+    "novas": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/novas.csv\" --output \"./data/playlists\"",
+    "novas_novas": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/novas_18082024.csv\" --output \"./data/playlists\"",
+    "festas24": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/festas24.csv\" --output \"./data/playlists\"",
+    "puntz_puntz": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/puntz_puntz.csv\" --output \"./data/playlists\"",
+    "cacetadas_guiomar": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/cacetadas_guiomar.csv\" --output \"./data/playlists\"",
+    "novas_2025": "node main.js --songs \"C:\\Users\\joaom\\Music\\Soggfy\" --playlist \"./data/csv/novas_2025.csv\" --output \"./data/playlists\""
   },
   "author": "",
   "license": "ISC",
